--- a/Day-01/02-Closures/clickTracker.html
+++ b/Day-01/02-Closures/clickTracker.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Click Tracker</title>
 	<script>
-		function myApp(){
+		(function myApp(){
 			var counter = 0;
 			function trackClick(){
 				++counter;
@@ -15,8 +15,8 @@
 				btnTrack.addEventListener("click", trackClick);
 			}
 			window.addEventListener("DOMContentLoaded", init);
-		}
-		myApp();
+		})();
+		//myApp();
 	</script>
 </head>
 <body>
